--- a/mbx/files/框架内容_8/styles.css
+++ b/mbx/files/框架内容_8/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:320px;
+  width:670px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -429,4 +429,31 @@
   height:90px;
   overflow:hidden;
   background-image:url('../../resources/images/transparent.gif');
+}
+#u31 {
+  position:absolute;
+  left:350px;
+  top:70px;
+  width:320px;
+  height:400px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  color:#000000;
+  text-align:left;
+  line-height:20px;
+}
+#u31_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:400px;
+}
+#u32 {
+  position:absolute;
+  left:10px;
+  top:10px;
+  width:300px;
+  word-wrap:break-word;
 }
