--- a/jglh/files/框架内容/styles.css
+++ b/jglh/files/框架内容/styles.css
@@ -43,6 +43,24 @@
   position:absolute;
   left:0px;
   top:0px;
+}
+#u1_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u1_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u2 {
+  position:absolute;
+  left:0px;
+  top:0px;
   width:320px;
   height:64px;
   font-family:'MicrosoftYaHei', '微软雅黑 Bold', '微软雅黑';
@@ -52,14 +70,14 @@
   color:#FFFFFF;
   text-align:left;
 }
-#u1_img {
+#u2_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   height:64px;
 }
-#u2 {
+#u3 {
   position:absolute;
   left:2px;
   top:24px;
@@ -67,29 +85,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u3 {
-  position:absolute;
-  left:6px;
-  top:5px;
-  width:308px;
-  height:13px;
-}
-#u3_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:308px;
-  height:13px;
-}
 #u4 {
-  position:absolute;
-  left:2px;
-  top:-2px;
-  width:304px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u5 {
   position:absolute;
   left:0px;
   top:30px;
@@ -99,38 +95,37 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#FFFFFF;
   text-align:center;
 }
-#u5_img {
+#u4_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   height:24px;
 }
-#u6 {
+#u5 {
   position:absolute;
   left:0px;
   top:-2px;
   width:320px;
   word-wrap:break-word;
 }
-#u7 {
+#u6 {
   position:absolute;
   left:6px;
   top:30px;
   width:24px;
   height:24px;
 }
-#u7_img {
+#u6_img {
   position:absolute;
   left:0px;
   top:0px;
   width:24px;
   height:24px;
 }
-#u8 {
+#u7 {
   position:absolute;
   left:2px;
   top:4px;
@@ -138,21 +133,21 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u9 {
+#u8 {
   position:absolute;
   left:290px;
   top:30px;
   width:24px;
   height:24px;
 }
-#u9_img {
+#u8_img {
   position:absolute;
   left:0px;
   top:0px;
   width:24px;
   height:24px;
 }
-#u10 {
+#u9 {
   position:absolute;
   left:2px;
   top:4px;
@@ -160,7 +155,29 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u10 {
+  position:absolute;
+  left:6px;
+  top:5px;
+  width:308px;
+  height:13px;
+}
+#u10_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:308px;
+  height:13px;
+}
 #u11 {
+  position:absolute;
+  left:2px;
+  top:-2px;
+  width:304px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u12 {
   position:absolute;
   left:0px;
   top:64px;
@@ -170,42 +187,42 @@
   font-weight:200;
   font-style:normal;
 }
-#u11_img {
+#u12_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   height:466px;
 }
-#u12 {
+#u13 {
   position:absolute;
   left:2px;
   top:226px;
   width:316px;
   word-wrap:break-word;
 }
-#u13 {
+#u14 {
   position:absolute;
   left:10px;
   top:414px;
   width:35px;
   height:35px;
 }
-#u13_img {
+#u14_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u14 {
+#u15 {
   position:absolute;
   left:2px;
   top:11px;
   width:31px;
   word-wrap:break-word;
 }
-#u15 {
+#u16 {
   position:absolute;
   left:270px;
   top:360px;
@@ -213,21 +230,21 @@
   height:35px;
   font-size:10px;
 }
-#u15_img {
+#u16_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u16 {
+#u17 {
   position:absolute;
   left:2px;
   top:8px;
   width:31px;
   word-wrap:break-word;
 }
-#u17 {
+#u18 {
   position:absolute;
   left:270px;
   top:414px;
@@ -235,116 +252,116 @@
   height:35px;
   font-size:10px;
 }
-#u17_img {
+#u18_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u18 {
+#u19 {
   position:absolute;
   left:2px;
   top:8px;
   width:31px;
   word-wrap:break-word;
 }
-#u19 {
+#u20 {
   position:absolute;
   left:10px;
   top:468px;
 }
-#u19_state0 {
+#u20_state0 {
   position:relative;
   left:0px;
   top:0px;
   background-image:none;
 }
-#u19_state0_content {
+#u20_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u20 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:35px;
-  height:35px;
-}
-#u20_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:35px;
-  height:35px;
-}
 #u21 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:35px;
+  height:35px;
+}
+#u21_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:35px;
+  height:35px;
+}
+#u22 {
   position:absolute;
   left:2px;
   top:11px;
   width:31px;
   word-wrap:break-word;
 }
-#u22 {
+#u23 {
   position:absolute;
   left:50px;
   top:0px;
   width:200px;
   height:35px;
 }
-#u22_img {
+#u23_img {
   position:absolute;
   left:0px;
   top:0px;
   width:200px;
   height:35px;
 }
-#u23 {
+#u24 {
   position:absolute;
   left:2px;
   top:11px;
   width:196px;
   word-wrap:break-word;
 }
-#u24 {
+#u25 {
   position:absolute;
   left:260px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u24_img {
+#u25_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u25 {
+#u26 {
   position:absolute;
   left:2px;
   top:11px;
   width:31px;
   word-wrap:break-word;
 }
-#u19_state1 {
+#u20_state1 {
   position:relative;
   left:0px;
   top:0px;
   visibility:hidden;
   background-image:none;
 }
-#u19_state1_content {
+#u20_state1_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u26 {
+#u27 {
   position:absolute;
   left:0px;
   top:0px;
@@ -354,42 +371,42 @@
   font-weight:200;
   font-style:normal;
 }
-#u26_img {
+#u27_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u27 {
+#u28 {
   position:absolute;
   left:2px;
   top:11px;
   width:31px;
   word-wrap:break-word;
 }
-#u28 {
+#u29 {
   position:absolute;
   left:50px;
   top:0px;
   width:200px;
   height:35px;
 }
-#u28_img {
+#u29_img {
   position:absolute;
   left:0px;
   top:0px;
   width:200px;
   height:35px;
 }
-#u29 {
+#u30 {
   position:absolute;
   left:2px;
   top:11px;
   width:196px;
   word-wrap:break-word;
 }
-#u30 {
+#u31 {
   position:absolute;
   left:260px;
   top:0px;
@@ -399,39 +416,39 @@
   font-weight:200;
   font-style:normal;
 }
-#u30_img {
+#u31_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u31 {
+#u32 {
   position:absolute;
   left:2px;
   top:11px;
   width:31px;
   word-wrap:break-word;
 }
-#u33 {
+#u34 {
   position:fixed;
   left:0px;
   bottom:20px;
 }
-#u33_state0 {
+#u34_state0 {
   position:relative;
   left:0px;
   top:0px;
   background-image:none;
 }
-#u33_state0_content {
+#u34_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
 }
-#u34 {
+#u35 {
   position:absolute;
   left:0px;
   top:0px;
@@ -442,14 +459,14 @@
   font-style:normal;
   font-size:12px;
 }
-#u34_img {
+#u35_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   height:50px;
 }
-#u35 {
+#u36 {
   position:absolute;
   left:2px;
   top:17px;
@@ -457,7 +474,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u36 {
+#u37 {
   position:absolute;
   left:20px;
   top:3px;
@@ -469,22 +486,22 @@
   font-size:12px;
   color:#1E1E1E;
 }
-#u36_img {
+#u37_img {
   position:absolute;
   left:0px;
   top:0px;
   width:32px;
   height:32px;
-}
-#u37 {
-  position:absolute;
-  left:2px;
-  top:9px;
-  width:28px;
-  word-wrap:break-word;
 }
 #u38 {
   position:absolute;
+  left:2px;
+  top:9px;
+  width:28px;
+  word-wrap:break-word;
+}
+#u39 {
+  position:absolute;
   left:20px;
   top:33px;
   width:32px;
@@ -496,47 +513,47 @@
   color:#666666;
   text-align:center;
 }
-#u38_img {
+#u39_img {
   position:absolute;
   left:0px;
   top:0px;
   width:32px;
   height:14px;
-}
-#u39 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  word-wrap:break-word;
 }
 #u40 {
   position:absolute;
-  left:144px;
-  top:3px;
-  width:32px;
-  height:32px;
-  font-family:'SimSun', 'SimSun';
-  font-weight:400;
-  font-style:normal;
-  font-size:12px;
-  color:#1E1E1E;
-}
-#u40_img {
-  position:absolute;
   left:0px;
   top:0px;
   width:32px;
-  height:32px;
+  word-wrap:break-word;
 }
 #u41 {
   position:absolute;
+  left:144px;
+  top:3px;
+  width:32px;
+  height:32px;
+  font-family:'SimSun', 'SimSun';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u41_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:32px;
+}
+#u42 {
+  position:absolute;
   left:2px;
   top:9px;
   width:28px;
   word-wrap:break-word;
 }
-#u42 {
+#u43 {
   position:absolute;
   left:144px;
   top:33px;
@@ -549,21 +566,21 @@
   color:#666666;
   text-align:center;
 }
-#u42_img {
+#u43_img {
   position:absolute;
   left:0px;
   top:0px;
   width:32px;
   height:14px;
 }
-#u43 {
+#u44 {
   position:absolute;
   left:0px;
   top:0px;
   width:32px;
   word-wrap:break-word;
 }
-#u44 {
+#u45 {
   position:absolute;
   left:268px;
   top:3px;
@@ -575,21 +592,21 @@
   font-size:12px;
   color:#1E1E1E;
 }
-#u44_img {
+#u45_img {
   position:absolute;
   left:0px;
   top:0px;
   width:32px;
   height:32px;
 }
-#u45 {
+#u46 {
   position:absolute;
   left:2px;
   top:9px;
   width:28px;
   word-wrap:break-word;
 }
-#u46 {
+#u47 {
   position:absolute;
   left:268px;
   top:33px;
@@ -602,35 +619,35 @@
   color:#666666;
   text-align:center;
 }
-#u46_img {
+#u47_img {
   position:absolute;
   left:0px;
   top:0px;
   width:32px;
   height:14px;
 }
-#u47 {
+#u48 {
   position:absolute;
   left:0px;
   top:0px;
   width:32px;
   word-wrap:break-word;
 }
-#u48 {
+#u49 {
   position:absolute;
   left:10px;
   top:74px;
   width:35px;
   height:35px;
 }
-#u48_img {
+#u49_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:35px;
 }
-#u49 {
+#u50 {
   position:absolute;
   left:2px;
   top:11px;
