--- a/jglh/files/框架内容_13/styles.css
+++ b/jglh/files/框架内容_13/styles.css
@@ -44,39 +44,16 @@
   left:0px;
   top:0px;
   width:320px;
-  height:570px;
-  font-size:12px;
+  height:64px;
 }
 #u1_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
-  height:570px;
+  height:64px;
 }
 #u2 {
-  position:absolute;
-  left:2px;
-  top:277px;
-  width:316px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u3 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:64px;
-}
-#u3_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:64px;
-}
-#u4 {
   position:absolute;
   left:2px;
   top:24px;
@@ -84,7 +61,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u5 {
+#u3 {
   position:absolute;
   left:0px;
   top:32px;
@@ -93,35 +70,35 @@
   font-size:20px;
   text-align:center;
 }
-#u5_img {
+#u3_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   height:21px;
 }
-#u6 {
+#u4 {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   word-wrap:break-word;
 }
-#u7 {
+#u5 {
   position:absolute;
   left:0px;
   top:30px;
   width:24px;
   height:24px;
 }
-#u7_img {
+#u5_img {
   position:absolute;
   left:0px;
   top:0px;
   width:24px;
   height:24px;
 }
-#u8 {
+#u6 {
   position:absolute;
   left:2px;
   top:4px;
@@ -129,21 +106,21 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u9 {
+#u7 {
   position:absolute;
   left:6px;
   top:5px;
   width:308px;
   height:13px;
 }
-#u9_img {
+#u7_img {
   position:absolute;
   left:0px;
   top:0px;
   width:308px;
   height:13px;
 }
-#u10 {
+#u8 {
   position:absolute;
   left:2px;
   top:-2px;
@@ -151,343 +128,277 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u11 {
+#u9 {
   position:absolute;
-  left:10px;
-  top:515px;
-  width:296px;
-  height:35px;
+  left:0px;
+  top:64px;
+  width:320px;
+  height:506px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
   font-size:12px;
-  color:#1E1E1E;
 }
-#u11_img {
+#u9_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:296px;
-  height:35px;
+  width:320px;
+  height:506px;
 }
-#u11_img.disabled {
+#u10 {
+  position:absolute;
+  left:2px;
+  top:245px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
-#u11.disabled {
+#u11 {
+  position:absolute;
+  left:0px;
+  top:75px;
+}
+#u11_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u11_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
 }
 #u12 {
   position:absolute;
-  left:2px;
-  top:12px;
-  width:292px;
-  word-wrap:break-word;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:90px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  color:#797979;
+  text-align:left;
+}
+#u12_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:90px;
 }
 #u13 {
   position:absolute;
-  left:0px;
-  top:80px;
-  width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
-}
-#u13_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:44px;
+  left:2px;
+  top:37px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u14 {
   position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
+  left:10px;
+  top:10px;
+  width:100px;
+  height:70px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
 }
-#u15 {
-  position:absolute;
-  left:255px;
-  top:86px;
-  width:51px;
-  height:31px;
-}
-#u15_img {
+#u14_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:51px;
-  height:31px;
+  width:100px;
+  height:70px;
+}
+#u15 {
+  position:absolute;
+  left:2px;
+  top:27px;
+  width:96px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u16 {
   position:absolute;
-  left:2px;
-  top:8px;
-  width:47px;
-  visibility:hidden;
-  word-wrap:break-word;
+  left:120px;
+  top:10px;
+  width:190px;
+  height:20px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  line-height:20px;
+}
+#u16_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:190px;
+  height:20px;
 }
 #u17 {
   position:absolute;
   left:0px;
-  top:124px;
-  width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
-}
-#u17_img {
-  position:absolute;
-  left:0px;
   top:0px;
-  width:320px;
-  height:44px;
+  width:190px;
+  word-wrap:break-word;
 }
 #u18 {
   position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
+  left:120px;
+  top:40px;
+  width:190px;
+  height:40px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  color:#999999;
+  line-height:20px;
+}
+#u18_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:190px;
+  height:40px;
 }
 #u19 {
   position:absolute;
-  left:255px;
-  top:130px;
-  width:51px;
-  height:31px;
-  font-size:14px;
-}
-#u19_img {
-  position:absolute;
   left:0px;
   top:0px;
-  width:51px;
-  height:31px;
+  width:190px;
+  word-wrap:break-word;
 }
 #u20 {
   position:absolute;
-  left:2px;
-  top:8px;
-  width:47px;
-  visibility:hidden;
-  word-wrap:break-word;
+  left:0px;
+  top:96px;
+  width:320px;
+  height:90px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  color:#797979;
+  text-align:left;
+}
+#u20_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:90px;
 }
 #u21 {
   position:absolute;
-  left:0px;
-  top:288px;
-  width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
-}
-#u21_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:44px;
+  left:2px;
+  top:37px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u22 {
   position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
+  left:10px;
+  top:106px;
+  width:100px;
+  height:70px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
 }
-#u23 {
-  position:absolute;
-  left:255px;
-  top:294px;
-  width:51px;
-  height:31px;
-  font-size:16px;
-  color:#1E1E1E;
-}
-#u23_img {
+#u22_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:51px;
-  height:31px;
+  width:100px;
+  height:70px;
+}
+#u23 {
+  position:absolute;
+  left:2px;
+  top:27px;
+  width:96px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u24 {
   position:absolute;
-  left:2px;
-  top:8px;
-  width:47px;
-  word-wrap:break-word;
+  left:120px;
+  top:106px;
+  width:190px;
+  height:20px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:14px;
+  line-height:20px;
+}
+#u24_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:190px;
+  height:20px;
 }
 #u25 {
   position:absolute;
   left:0px;
-  top:244px;
-  width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
-}
-#u25_img {
-  position:absolute;
-  left:0px;
   top:0px;
-  width:320px;
-  height:44px;
+  width:190px;
+  word-wrap:break-word;
 }
 #u26 {
   position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
+  left:120px;
+  top:136px;
+  width:190px;
+  height:40px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  color:#999999;
+  line-height:20px;
+}
+#u26_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:190px;
+  height:40px;
 }
 #u27 {
   position:absolute;
   left:0px;
-  top:200px;
-  width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
+  top:0px;
+  width:190px;
+  word-wrap:break-word;
 }
-#u27_img {
+#u28 {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
-  height:44px;
-}
-#u28 {
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
+  height:90px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
 }
 #u29 {
   position:absolute;
   left:0px;
-  top:360px;
+  top:96px;
   width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
-}
-#u29_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:44px;
-}
-#u30 {
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
-}
-#u31 {
-  position:absolute;
-  left:0px;
-  top:404px;
-  width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
-}
-#u31_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:44px;
-}
-#u32 {
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
-}
-#u33 {
-  position:absolute;
-  left:265px;
-  top:250px;
-  width:32px;
-  height:32px;
-}
-#u33_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u34 {
-  position:absolute;
-  left:2px;
-  top:8px;
-  width:28px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u35 {
-  position:absolute;
-  left:264px;
-  top:206px;
-  width:32px;
-  height:32px;
-}
-#u35_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u36 {
-  position:absolute;
-  left:2px;
-  top:8px;
-  width:28px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u37 {
-  position:absolute;
-  left:0px;
-  top:448px;
-  width:320px;
-  height:44px;
-  font-size:14px;
-  color:#000000;
-  text-align:left;
-}
-#u37_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:44px;
-}
-#u38 {
-  position:absolute;
-  left:2px;
-  top:14px;
-  width:316px;
-  word-wrap:break-word;
-}
-#u39 {
-  position:absolute;
-  left:0px;
-  top:448px;
-  width:320px;
-  height:46px;
+  height:90px;
   overflow:hidden;
   background-image:url('../../resources/images/transparent.gif');
 }
