--- a/jglh/files/框架内容_14/styles.css
+++ b/jglh/files/框架内容_14/styles.css
@@ -45,9 +45,6 @@
   top:0px;
   width:320px;
   height:570px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
   font-size:12px;
 }
 #u1_img {
@@ -156,233 +153,341 @@
 }
 #u11 {
   position:absolute;
-  left:416px;
-  top:758px;
-  width:24px;
-  height:24px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:16px;
-  color:#FFFFFF;
+  left:10px;
+  top:515px;
+  width:296px;
+  height:35px;
+  font-size:12px;
+  color:#1E1E1E;
 }
 #u11_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:24px;
-  height:24px;
+  width:296px;
+  height:35px;
+}
+#u11_img.disabled {
+}
+#u11.disabled {
 }
 #u12 {
   position:absolute;
   left:2px;
-  top:4px;
-  width:20px;
-  visibility:hidden;
+  top:12px;
+  width:292px;
   word-wrap:break-word;
 }
 #u13 {
   position:absolute;
-  left:100px;
-  top:90px;
-  width:120px;
-  height:120px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
+  left:0px;
+  top:80px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
 }
 #u13_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:120px;
-  height:120px;
+  width:320px;
+  height:44px;
 }
 #u14 {
   position:absolute;
   left:2px;
-  top:54px;
-  width:116px;
+  top:14px;
+  width:316px;
   word-wrap:break-word;
 }
 #u15 {
   position:absolute;
-  left:0px;
-  top:230px;
-  width:320px;
-  height:13px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  text-align:center;
+  left:255px;
+  top:86px;
+  width:51px;
+  height:31px;
 }
 #u15_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:320px;
-  height:13px;
+  width:51px;
+  height:31px;
 }
 #u16 {
   position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
+  left:2px;
+  top:8px;
+  width:47px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u17 {
   position:absolute;
-  left:126px;
-  top:260px;
-  width:65px;
-  height:13px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  text-align:center;
+  left:0px;
+  top:124px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
 }
 #u17_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:65px;
-  height:13px;
+  width:320px;
+  height:44px;
 }
 #u18 {
   position:absolute;
-  left:0px;
-  top:0px;
-  width:65px;
-  white-space:nowrap;
+  left:2px;
+  top:14px;
+  width:316px;
+  word-wrap:break-word;
 }
 #u19 {
   position:absolute;
-  left:24px;
-  top:544px;
-  width:270px;
-  height:13px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  text-align:center;
+  left:255px;
+  top:130px;
+  width:51px;
+  height:31px;
+  font-size:14px;
 }
 #u19_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:270px;
-  height:13px;
+  width:51px;
+  height:31px;
 }
 #u20 {
   position:absolute;
-  left:0px;
-  top:0px;
-  width:270px;
-  white-space:nowrap;
+  left:2px;
+  top:8px;
+  width:47px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u21 {
   position:absolute;
-  left:60px;
-  top:516px;
-  width:100px;
-  height:22px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:12px;
-  color:#3498DB;
+  left:0px;
+  top:288px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
 }
 #u21_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:100px;
-  height:22px;
+  width:320px;
+  height:44px;
 }
 #u22 {
   position:absolute;
   left:2px;
-  top:5px;
-  width:96px;
+  top:14px;
+  width:316px;
   word-wrap:break-word;
 }
 #u23 {
   position:absolute;
-  left:160px;
-  top:516px;
-  width:100px;
-  height:22px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:12px;
-  color:#3498DB;
+  left:255px;
+  top:294px;
+  width:51px;
+  height:31px;
+  font-size:16px;
+  color:#1E1E1E;
 }
 #u23_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:100px;
-  height:22px;
+  width:51px;
+  height:31px;
 }
 #u24 {
   position:absolute;
   left:2px;
-  top:5px;
-  width:96px;
+  top:8px;
+  width:47px;
   word-wrap:break-word;
 }
 #u25 {
   position:absolute;
-  left:155px;
-  top:518px;
-  width:10px;
-  height:18px;
+  left:0px;
+  top:244px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
 }
-#u25_start {
-  position:absolute;
-  left:-5px;
-  top:0px;
-  width:20px;
-  height:18px;
-}
-#u25_end {
-  position:absolute;
-  left:-5px;
-  top:1px;
-  width:20px;
-  height:18px;
-}
-#u25_line {
-  position:absolute;
-  left:5px;
-  top:0px;
-  width:1px;
-  height:18px;
-}
-#u26 {
-  position:absolute;
-  left:8px;
-  top:290px;
-  width:300px;
-  height:192px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:12px;
-  line-height:16px;
-}
-#u26_img {
+#u25_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:300px;
-  height:192px;
+  width:320px;
+  height:44px;
+}
+#u26 {
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:316px;
+  word-wrap:break-word;
 }
 #u27 {
   position:absolute;
   left:0px;
+  top:200px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
+}
+#u27_img {
+  position:absolute;
+  left:0px;
   top:0px;
-  width:300px;
+  width:320px;
+  height:44px;
+}
+#u28 {
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:316px;
   word-wrap:break-word;
+}
+#u29 {
+  position:absolute;
+  left:0px;
+  top:360px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
+}
+#u29_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:44px;
+}
+#u30 {
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u31 {
+  position:absolute;
+  left:0px;
+  top:404px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
+}
+#u31_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:44px;
+}
+#u32 {
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u33 {
+  position:absolute;
+  left:265px;
+  top:250px;
+  width:32px;
+  height:32px;
+}
+#u33_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:32px;
+}
+#u34 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:28px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u35 {
+  position:absolute;
+  left:264px;
+  top:206px;
+  width:32px;
+  height:32px;
+}
+#u35_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:32px;
+}
+#u36 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:28px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u37 {
+  position:absolute;
+  left:0px;
+  top:448px;
+  width:320px;
+  height:44px;
+  font-size:14px;
+  color:#000000;
+  text-align:left;
+}
+#u37_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:44px;
+}
+#u38 {
+  position:absolute;
+  left:2px;
+  top:14px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u39 {
+  position:absolute;
+  left:0px;
+  top:448px;
+  width:320px;
+  height:46px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
 }
