--- a/jglh/files/框架内容_7/styles.css
+++ b/jglh/files/框架内容_7/styles.css
@@ -44,16 +44,65 @@
   left:0px;
   top:0px;
   width:320px;
-  height:64px;
+  height:570px;
 }
 #u1_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
-  height:64px;
+  height:570px;
 }
 #u2 {
+  position:absolute;
+  left:2px;
+  top:277px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u3 {
+  position:fixed;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:64px;
+  overflow:hidden;
+}
+#u3_state0 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:64px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u3_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u4 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:64px;
+}
+#u4_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:64px;
+}
+#u5 {
   position:absolute;
   left:2px;
   top:24px;
@@ -61,21 +110,21 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u3 {
+#u6 {
   position:absolute;
   left:6px;
   top:5px;
   width:308px;
   height:13px;
 }
-#u3_img {
+#u6_img {
   position:absolute;
   left:0px;
   top:0px;
   width:308px;
   height:13px;
 }
-#u4 {
+#u7 {
   position:absolute;
   left:2px;
   top:-2px;
@@ -83,468 +132,47 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u5 {
-  position:absolute;
-  left:24px;
-  top:200px;
-  width:272px;
-  height:153px;
-  overflow:hidden;
-  visibility:hidden;
-}
-#u5_state0 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:272px;
-  height:153px;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-}
-#u5_state0_content {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u6 {
-  position:absolute;
-  left:0px;
-  top:70px;
-  width:60px;
-  height:60px;
-  font-size:10px;
-}
-#u6_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  height:60px;
-}
-#u7 {
-  position:absolute;
-  left:2px;
-  top:25px;
-  width:56px;
-  word-wrap:break-word;
-}
 #u8 {
   position:absolute;
-  left:110px;
-  top:70px;
-  width:60px;
-  height:60px;
-  font-size:10px;
+  left:0px;
+  top:30px;
+  width:320px;
+  height:25px;
+  font-family:'MicrosoftYaHei', 'Microsoft YaHei';
+  font-weight:400;
+  font-style:normal;
+  font-size:20px;
+  text-align:center;
 }
 #u8_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:60px;
-  height:60px;
+  width:320px;
+  height:25px;
 }
 #u9 {
   position:absolute;
-  left:2px;
-  top:25px;
-  width:56px;
+  left:0px;
+  top:-1px;
+  width:320px;
   word-wrap:break-word;
 }
 #u10 {
-  position:absolute;
-  left:212px;
-  top:70px;
-  width:60px;
-  height:60px;
-  font-size:10px;
-}
-#u10_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  height:60px;
-}
-#u11 {
-  position:absolute;
-  left:2px;
-  top:25px;
-  width:56px;
-  word-wrap:break-word;
-}
-#u12 {
-  position:absolute;
-  left:0px;
-  top:140px;
-  width:60px;
-  height:13px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  color:#FFFFFF;
-  text-align:center;
-}
-#u12_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  height:13px;
-}
-#u13 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  word-wrap:break-word;
-}
-#u14 {
-  position:absolute;
-  left:110px;
-  top:140px;
-  width:60px;
-  height:13px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  color:#FFFFFF;
-  text-align:center;
-}
-#u14_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  height:13px;
-}
-#u15 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  word-wrap:break-word;
-}
-#u16 {
-  position:absolute;
-  left:212px;
-  top:140px;
-  width:60px;
-  height:13px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  color:#FFFFFF;
-  text-align:center;
-}
-#u16_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  height:13px;
-}
-#u17 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:60px;
-  word-wrap:break-word;
-}
-#u18 {
-  position:absolute;
-  left:10px;
-  top:0px;
-  width:250px;
-  height:60px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u18_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:250px;
-  height:60px;
-}
-#u19 {
-  position:absolute;
-  left:2px;
-  top:15px;
-  width:246px;
-  word-wrap:break-word;
-}
-#u20 {
-  position:absolute;
-  left:0px;
-  top:530px;
-  width:320px;
-  height:35px;
-  overflow:hidden;
-}
-#u20_state0 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:35px;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-}
-#u20_state0_content {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u21 {
-  position:absolute;
-  left:2px;
-  top:2px;
-  width:32px;
-  height:32px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u21_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u22 {
-  position:absolute;
-  left:2px;
-  top:10px;
-  width:28px;
-  word-wrap:break-word;
-}
-#u23 {
-  position:absolute;
-  left:37px;
-  top:0px;
-  width:210px;
-  height:35px;
-}
-#u23_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:210px;
-  height:35px;
-}
-#u24 {
-  position:absolute;
-  left:2px;
-  top:11px;
-  width:206px;
-  word-wrap:break-word;
-}
-#u25 {
-  position:absolute;
-  left:251px;
-  top:2px;
-  width:32px;
-  height:32px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u25_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u26 {
-  position:absolute;
-  left:2px;
-  top:10px;
-  width:28px;
-  word-wrap:break-word;
-}
-#u27 {
-  position:absolute;
-  left:286px;
-  top:2px;
-  width:32px;
-  height:32px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:28px;
-}
-#u27_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u28 {
-  position:absolute;
-  left:2px;
-  top:2px;
-  width:28px;
-  word-wrap:break-word;
-}
-#u20_state1 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:35px;
-  visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-}
-#u20_state1_content {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u29 {
-  position:absolute;
-  left:0px;
-  top:2px;
-  width:32px;
-  height:32px;
-}
-#u29_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u30 {
-  position:absolute;
-  left:2px;
-  top:10px;
-  width:28px;
-  word-wrap:break-word;
-}
-#u31 {
-  position:absolute;
-  left:36px;
-  top:0px;
-  width:210px;
-  height:35px;
-}
-#u31_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:210px;
-  height:35px;
-}
-#u32 {
-  position:absolute;
-  left:2px;
-  top:11px;
-  width:206px;
-  word-wrap:break-word;
-}
-#u33 {
-  position:absolute;
-  left:249px;
-  top:2px;
-  width:32px;
-  height:32px;
-}
-#u33_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u34 {
-  position:absolute;
-  left:2px;
-  top:10px;
-  width:28px;
-  word-wrap:break-word;
-}
-#u35 {
-  position:absolute;
-  left:285px;
-  top:2px;
-  width:32px;
-  height:32px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:28px;
-}
-#u35_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:32px;
-  height:32px;
-}
-#u36 {
-  position:absolute;
-  left:2px;
-  top:2px;
-  width:28px;
-  word-wrap:break-word;
-}
-#u37 {
-  position:absolute;
-  left:120px;
-  top:32px;
-  width:81px;
-  height:21px;
-  font-size:20px;
-}
-#u37_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:81px;
-  height:21px;
-}
-#u38 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:81px;
-  white-space:nowrap;
-}
-#u39 {
   position:absolute;
   left:0px;
   top:30px;
   width:24px;
   height:24px;
 }
-#u39_img {
+#u10_img {
   position:absolute;
   left:0px;
   top:0px;
   width:24px;
   height:24px;
 }
-#u40 {
+#u11 {
   position:absolute;
   left:2px;
   top:4px;
@@ -552,24 +180,408 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u41 {
+#u12 {
   position:absolute;
-  left:282px;
-  top:26px;
-  width:32px;
-  height:32px;
+  left:0px;
+  top:526px;
+  width:320px;
+  height:44px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:20px;
+  color:#FF0000;
+  line-height:20px;
 }
-#u41_img {
+#u12_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:32px;
-  height:32px;
+  width:320px;
+  height:44px;
 }
-#u42 {
+#u13 {
+  position:absolute;
+  left:20px;
+  top:12px;
+  width:298px;
+  word-wrap:break-word;
+}
+#u14 {
+  position:absolute;
+  left:0px;
+  top:310px;
+  width:320px;
+  height:60px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:16px;
+  text-align:left;
+  line-height:20px;
+}
+#u14_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:60px;
+}
+#u15 {
+  position:absolute;
+  left:20px;
+  top:20px;
+  width:298px;
+  word-wrap:break-word;
+}
+#u16 {
+  position:absolute;
+  left:0px;
+  top:370px;
+  width:320px;
+  height:60px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:16px;
+  text-align:left;
+  line-height:20px;
+}
+#u16_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:60px;
+}
+#u17 {
+  position:absolute;
+  left:20px;
+  top:20px;
+  width:298px;
+  word-wrap:break-word;
+}
+#u18 {
+  position:absolute;
+  left:235px;
+  top:310px;
+  width:70px;
+  height:60px;
+  font-size:14px;
+  text-align:right;
+}
+#u18_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:60px;
+}
+#u19 {
+  position:absolute;
+  left:0px;
+  top:22px;
+  width:70px;
+  word-wrap:break-word;
+}
+#u20 {
+  position:absolute;
+  left:235px;
+  top:370px;
+  width:70px;
+  height:60px;
+  font-size:14px;
+  text-align:right;
+}
+#u20_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:70px;
+  height:60px;
+}
+#u21 {
+  position:absolute;
+  left:0px;
+  top:22px;
+  width:70px;
+  word-wrap:break-word;
+}
+#u22 {
+  position:absolute;
+  left:0px;
+  top:136px;
+  width:160px;
+  height:44px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+  text-align:right;
+  line-height:20px;
+}
+#u22_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:44px;
+}
+#u23 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u24 {
+  position:absolute;
+  left:160px;
+  top:136px;
+  width:160px;
+  height:44px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+  text-align:left;
+  line-height:20px;
+}
+#u24_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:44px;
+}
+#u25 {
+  position:absolute;
+  left:20px;
+  top:12px;
+  width:120px;
+  word-wrap:break-word;
+}
+#u26 {
+  position:absolute;
+  left:0px;
+  top:180px;
+  width:160px;
+  height:40px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:18px;
+  color:#999999;
+  text-align:right;
+  line-height:20px;
+}
+#u26_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:40px;
+}
+#u27 {
   position:absolute;
   left:2px;
   top:10px;
-  width:28px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u28 {
+  position:absolute;
+  left:160px;
+  top:180px;
+  width:160px;
+  height:40px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:18px;
+  color:#999999;
+  text-align:left;
+  line-height:20px;
+}
+#u28_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:40px;
+}
+#u29 {
+  position:absolute;
+  left:20px;
+  top:10px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u30 {
+  position:absolute;
+  left:0px;
+  top:96px;
+  width:160px;
+  height:40px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:18px;
+  color:#999999;
+  text-align:right;
+  line-height:20px;
+}
+#u30_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:40px;
+}
+#u31 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u32 {
+  position:absolute;
+  left:160px;
+  top:96px;
+  width:160px;
+  height:40px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:18px;
+  color:#999999;
+  text-align:left;
+  line-height:20px;
+}
+#u32_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:40px;
+}
+#u33 {
+  position:absolute;
+  left:20px;
+  top:10px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u34 {
+  position:absolute;
+  left:0px;
+  top:64px;
+  width:160px;
+  height:32px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:16px;
+  color:#CCCCCC;
+  text-align:right;
+  line-height:20px;
+}
+#u34_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:32px;
+}
+#u35 {
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u36 {
+  position:absolute;
+  left:160px;
+  top:64px;
+  width:160px;
+  height:32px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:16px;
+  color:#CCCCCC;
+  text-align:left;
+  line-height:20px;
+}
+#u36_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:32px;
+}
+#u37 {
+  position:absolute;
+  left:20px;
+  top:6px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u38 {
+  position:absolute;
+  left:0px;
+  top:220px;
+  width:160px;
+  height:32px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:16px;
+  color:#CCCCCC;
+  text-align:right;
+  line-height:20px;
+}
+#u38_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:32px;
+}
+#u39 {
+  position:absolute;
+  left:2px;
+  top:6px;
+  width:138px;
+  word-wrap:break-word;
+}
+#u40 {
+  position:absolute;
+  left:160px;
+  top:220px;
+  width:160px;
+  height:32px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:16px;
+  color:#CCCCCC;
+  text-align:left;
+  line-height:20px;
+}
+#u40_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:32px;
+}
+#u41 {
+  position:absolute;
+  left:20px;
+  top:6px;
+  width:138px;
   word-wrap:break-word;
 }
